fixed project description on mobile

--- a/src/components/Displays/Projects/projectdisplay.css
+++ b/src/components/Displays/Projects/projectdisplay.css
@@ -2,3 +2,8 @@
     width: 500px;
     word-wrap: break-word;
 }
+@media (max-width: 700px) {
+    .projectdisplay__description {
+        width: 350px !important;
+    }
+}
